--- a/exemplo13.html
+++ b/exemplo13.html
@@ -13,7 +13,15 @@
 
 <body>
     <div class="container">
-        <div class="row row-cols-2">
+        <div class="row row-cols-3">
+            <div class="col bg-light border p-3">Column</div>
+            <div class="col bg-light border p-3">Column</div>
+            <div class="col bg-light border p-3">Column</div>
+            <div class="col bg-light border p-3">Column</div>
+        </div>
+
+
+        <div class="row row-cols-2 mt-3">
             <div class="col bg-light border p-3">Column</div>
             <div class="col bg-light border p-3">Column</div>
             <div class="col bg-light border p-3">Column</div>
