--- a/exemplo16.html
+++ b/exemplo16.html
@@ -9,12 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Grid</title>
+    
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid bg-success p-3">
         <div class="row row-cols-auto">
-            <div class="col bg-light border p-3">Column</div>
+            <div class="col bg-light border p-3">Column colum colum colum</div>
             <div class="col bg-light border p-3">Column</div>
             <div class="col bg-light border p-3">Column</div>
             <div class="col bg-light border p-3">Column</div>
